--- a/templates/lesson_detail.html
+++ b/templates/lesson_detail.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Admin Panel</title>
+    <title>Lektion Details</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
     <!-- Bootstrap CSS -->
@@ -19,6 +19,56 @@
 
 </head>
 <body>
+    {% if is_admin %}
+        <!-- Navigationsleiste -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="/admin_dashboard">Admin Panel</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Navigation umschalten">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/modify_lessons">Lektion bearbeiten</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/modify_users">Benutzer bearbeiten</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/modify_subjects">Fächer bearbeiten</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/modify_family">Familie bearbeiten</a>
+                    </li>
+                    <!-- Weitere Links hinzufügen, falls erforderlich -->
+                </ul>
+            </div>
+        </nav>
+    {% else %}
+        <!-- Navigationsleiste -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="/tutor_profile">Tutoren Kabinett</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/tutor/change_password">Passwort zurücksetzen</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/tutor/view_students">Schüler anzeigen</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/tutor/lessons">Stunden-Übersicht</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/tutor/edit_tutor">Tutor Profil</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        {% endif %}
     <button onclick="goBack()" style="margin: 20px; padding: 10px;">Zurück</button>
     <div class="container">
         <h1>Lektion bearbeiten</h1>
@@ -98,8 +148,12 @@
                 <label for="final_price">Endpreis</label>
                 <input type="number" step="0.01" class="form-control" id="final_price" name="final_price" value="{{ lesson.final_price }}" required>
             </div>
-            <a href="{{ url_for('add_lesson', lesson_id=lesson.lesson_id) }}" class="btn btn-primary">Add Lesson</a>
+            <a href="{{ url_for('add_lesson', lesson_id=lesson.lesson_id) }}" class="btn btn-success">Neue Lektion mit Vorlage</a>
             <button class="btn btn-danger" onclick="deleteLesson(event, {{ lesson.lesson_id }})">Delete Lesson</button>
+            {% endif %}
+            {% if is_tutor %}
+            <a href="{{ url_for('add_lesson_based_on_existing', lesson_id=lesson.lesson_id) }}" class="btn btn-success">Neue Lektion mit Vorlage</a>
+
             {% endif %}
             <button type="submit" class="btn btn-primary">Lektion aktualisieren</button>
             <script>
