--- a/templates/admin_finances_families.html
+++ b/templates/admin_finances_families.html
@@ -36,13 +36,15 @@
         <form method="POST">
             <div class="form-group">
                 <label for="family_id">Familie auswählen:</label>
-                <select name="family_id" id="family_id">
+                <select name="family_id" id="family_id" class="form-control">
+                    <option value="Alle" {% if selected_family_id == 'Alle' %}selected{% endif %}>Alle</option>
                     {% for family in families %}
                         <option value="{{ family.id }}" {% if family.id == selected_family_id|int %}selected{% endif %}>
                             {{ family.name }}
                         </option>
                     {% endfor %}
                 </select>
+                
                 
             </div>
             <div class="form-group">
