--- a/templates/admin_financess.html
+++ b/templates/admin_financess.html
@@ -108,12 +108,26 @@
         </tbody>
     </table>
     <!-- Total Profit Box -->
+
     <div class="d-flex justify-content-center">
-        <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-            <div class="card-header">Bruttogewinn</div>
-            <div class="card-body">
-                <h5 class="card-title">Bruttogewinn</h5>
-                <p class="card-text">{{ total_profit }}</p>
+        <div class="row">
+            <div class="col">
+                <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Umsatz</div>
+                    <div class="card-body">
+                        
+                        <p class="card-text">{{ total_fp }}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Bruttogewinn</div>
+                    <div class="card-body">
+                        
+                        <p class="card-text">{{ total_profit }}</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
