--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -18,10 +18,18 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <style>
+        body {
+            background-color: #f0f0f0; /* A very light grey background for the whole page */
+        }
         .container {
-            max-width: 80%; /* or any other percentage or fixed width */
-            margin: auto; /* center the container */
+            max-width: 80%; /* Adjust as per your layout needs */
+            margin: auto; /* Center the container */
             margin-top: 20px;
+        }
+        #calendar {
+            background-color: #ffffff; /* Ensure calendar background is white */
+            border: 1px solid #dddddd; /* Optional: adds a slight border around the calendar for better definition */
+            padding: 10px; /* Optional: adds some spacing inside the calendar container */
         }
     </style>
 </head>
@@ -69,16 +77,17 @@
     </nav>
 
 
-    <div style="display: flex; margin-top: 20px;">
-        <div style="margin-right: 20px;">
-            <a href="/add_lesson" class="btn btn-success" style="margin-bottom: 10px;">Neue Lektion</a>
-            <a href="/admin/finances" class="btn btn-primary" style="margin-bottom: 10px;">Finanzen</a>
-
-            <a href="/admin/report_cards" class="btn btn-info">Berichte</a>
+    <div class="container mt-5">
+        <!-- Button container -->
+        <div class="d-flex justify-content-center mb-4">
+            <a href="/add_lesson" class="btn btn-success mx-2">Neue Lektion</a>
+            <a href="/admin/finances" class="btn btn-primary mx-2">Finanzen</a>
+            <a href="/admin/report_cards" class="btn btn-info mx-2">Berichte</a>
         </div>
+        
+        <!-- Calendar -->
         <div id='calendar'></div>
     </div>
-
 
     <!-- Bootstrap und jQuery Skripte -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
