--- a/templates/tutor_profile.html
+++ b/templates/tutor_profile.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
     <div class="container-fluid mt-4">
-        <h2>Welcome, {{ tutor.name }}</h2>
+        <h2>Willkommen zurück {{ tutor.name }} </h2>
         <div id='calendar' class='mt-4'></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
