--- a/templates/admin_finances_families.html
+++ b/templates/admin_finances_families.html
@@ -88,7 +88,7 @@
     <div class="d-flex justify-content-center">
         <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
             <div class="card-body">
-                <h5 class="card-title">Total</h5>
+                <h5 class="card-title">Umsatz</h5>
                 <p class="card-text">{{ total }}</p>
             </div>
         </div>
