--- a/templates/admin_finances_families.html
+++ b/templates/admin_finances_families.html
@@ -31,6 +31,12 @@
             </ul>
         </div>
     </nav>
+    <br>
+    <div class="d-flex justify-content-center mb-3">
+        <a href="/admin/finances" class="btn btn-info mr-2">Globale Finanzen</a>
+        <a href="/admin/finances/tutors" class="btn btn-info">Finanzen der Tutoren</a>
+    </div>
+    
     <div class="container mt-5">
         <h1>Familienfinanzen Übersicht</h1>
         <form method="POST">
