--- a/templates/admin_finances_tutors.html
+++ b/templates/admin_finances_tutors.html
@@ -31,6 +31,13 @@
             </ul>
         </div>
     </nav>
+    <br>
+    <div class="d-flex justify-content-center mb-3">
+        <a href="/admin/finances" class="btn btn-info mr-2">Globale Finanzen</a>
+        <a href="/admin/finances/families" class="btn btn-info">Finanzen der Familien</a>
+    </div>
+    
+
     <div class="container mt-5">
         <h1>Tutor Finanzen Übersicht</h1>
         <form method="POST" class="mb-3">
