--- a/templates/admin_tutor_profile.html
+++ b/templates/admin_tutor_profile.html
@@ -70,6 +70,10 @@
                 {% endfor %}
             </tbody>
         </table>
+        <div class="my-2">
+            <a href="{{ url_for('tutor_add_subjectt', tutor_id=tutor.tutor_id) }}" class="btn btn-primary">Fächer hinzufügen</a>
+        </div>
+        
         
         
         <div>
