--- a/templates/lesson_detail.html
+++ b/templates/lesson_detail.html
@@ -149,8 +149,10 @@
                 <input type="number" step="0.01" class="form-control" id="final_price" name="final_price" value="{{ lesson.final_price }}" required>
             </div>
             <a href="{{ url_for('add_lesson', lesson_id=lesson.lesson_id) }}" class="btn btn-success">Neue Lektion mit Vorlage</a>
-            <button class="btn btn-danger" onclick="deleteLesson(event, {{ lesson.lesson_id }})">Delete Lesson</button>
+            
             {% endif %}
+            <button class="btn btn-danger" onclick="deleteLesson(event, {{ lesson.lesson_id }})">Lektion löschen</button>
+
             {% if is_tutor %}
             <a href="{{ url_for('add_lesson_based_on_existing', lesson_id=lesson.lesson_id) }}" class="btn btn-success">Neue Lektion mit Vorlage</a>
 
@@ -161,7 +163,13 @@
                     event.preventDefault();
 
                     fetch('/delete_lesson/' + lessonId, {
-                        method: 'POST'
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                            // Add any other headers your request might need
+                        },
+                        // Include credentials if your route requires authentication
+                        credentials: 'same-origin'
                     })
                     .then(response => {
                         if (!response.ok) {
@@ -170,16 +178,16 @@
                         return response.json();
                     })
                     .then(data => {
-                        if (data.message) {
-                            alert(data.message);
-                        }
-                        // Redirect to the lessons list page
-                        window.location.href = "/modify_lessons";
+                        alert(data.message);
+                        // Use the redirect URL from the response to redirect the user
+                        window.location.href = data.redirect_url;
                     })
                     .catch(error => {
                         console.error('There has been a problem with your fetch operation:', error);
+                        alert(error.message);
                     });
                 }
+
                 </script>
         </form>
         
