--- a/templates/modify_lessons.html
+++ b/templates/modify_lessons.html
@@ -103,8 +103,21 @@
                     <input type="date" class="form-control" id="to_date" name="to_date" value="{{ to_date }}">
                 </div>
             </div>
-           <!-- Tutors field -->
-            <br>
+            <!-- Tutors field -->
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="tutor_id">Tutor auswählen:</label>
+                    <select name="tutor_id" id="tutor_id" class="form-control">
+                        <option value="">--Alle--</option>
+                        {% for tutor in tutors %}
+                        <option value="{{ tutor.tutor_id }}" {% if tutor_id|string == tutor.tutor_id|string %}selected{% endif %}>
+                            {{ tutor.name }}
+                        </option>
+                        {% endfor %}
+                    </select>
+                </div>
+                
+            </div>
             <button type="submit">Filter anwenden</button>
         </form>
     </div>
